Fix footer floating when content does not fit whole window

--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,12 @@ body {
   margin: 0 auto;
 }
 
+.App {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
 .content {
   padding-left: 6rem;
   padding-right: 6rem;
